# Bluerov2_pid

./: README.md
Images/: command  data transfer success  mavros check status  mavros success  qualisys success  rosnode and topic
bluerov2_control/devel/: .catkin
bluerov2_control/devel/lib/bluerov2_motion_control/: bluerov2_motion_control_position_node  bluerov2_motion_control_velocity_node
bluerov2_control/devel/lib/mavros_pub/: example_node  mavros_pub_node
bluerov2_control/devel/lib/pkgconfig/: bluerov2_motion_control.pc  guidance_law.pc  mavros_pub.pc  pid_control.pc
bluerov2_control/src/bluerov2_motion_control/: CMakeLists.txt
bluerov2_control/src/bluerov2_motion_control/configs/: bluerov2_motion_control_config.yaml
bluerov2_control/src/mavros_pub/: CMakeLists.txt  package.xml
bluerov2_control/src/tank-setup/guidance_law/: CMakeLists.txt
bluerov2_control/src/tank-setup/guidance_law/configs/: guidance_params.yaml
bluerov2_control/src/tank-setup/guidance_law/launch/: guidance_law.launch
bluerov2_control/src/tank-setup/guidance_law/src/: guidance_law_node.py
ros_qualysis/: README.md
ros_qualysis/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_qualysis/install/ros-qualisys/: _setup_util.py  local_setup.sh  setup.fish  setup.sh
ros_qualysis/log/: latest_build
ros_qualysis/src/: CMakeLists.txt  README.md
ros_qualysis/src/config/: bauzil-qualisys.yaml
ros_qualysis/src/launch/: qualisys_bauzil_bringup.launch
ros_qualysis/src/scripts/: tf2_pose_gt_real.py
ros_qualysis/src/src/: qualisys-to-ros.cpp
(+37 files in other folders)
